Alignment fixes

--- a/styles/_design.scss
+++ b/styles/_design.scss
@@ -154,7 +154,7 @@
 
 .our-team-experience{
     display: grid;
-    padding: 5vw 5vw 0vw 5vw;
+    padding: 5vw 5vw 10vw 5vw;
     h2{
         font-family: "Futura";
         font-weight: 400;
