--- a/styles/shul.css
+++ b/styles/shul.css
@@ -464,7 +464,7 @@
 .our-team-experience {
   display: -ms-grid;
   display: grid;
-  padding: 5vw 5vw 0vw 5vw;
+  padding: 5vw 5vw 10vw 5vw;
 }
 
 .our-team-experience h2 {
